
include_directories(${OSG_INCLUDE_DIR} ${OPENTHREADS_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/include)

add_subdirectory(osgartsimple)
add_subdirectory(osgartvideobackground)
add_subdirectory(osgartpick)
add_subdirectory(osgartsimplestats)
add_subdirectory(osgartstbtest)
add_subdirectory(osgartsstttest)
add_subdirectory(osgartopiratest)
